Fix: input length ruining ui on mobile screen

--- a/src/main-page/main-style.css
+++ b/src/main-page/main-style.css
@@ -35,16 +35,24 @@
     }
   }
 
+  .input-wrapper {
+    display: flex;
+    gap: 7px;
+    .title {
+      width: 100%;
+    }
+  }
   .clear-input {
     box-sizing: border-box;
     padding: 0;
-    box-sizing: border-box;
-    /* width: max-content; added via javascript ./main */
+    width: 100%;
+    overflow: auto;
     font-weight: inherit;
     font-size: inherit;
     border: none;
+    width: 100%;
     &:focus {
-      outline: none;
+      outline: var(--outline-color) 2px solid;
     }
     &:disabled {
       background-color: transparent;
@@ -115,18 +123,22 @@
   }
 
   .header {
-    gap: 5px;
+    gap: 10px;
     box-sizing: border-box;
     margin: 0;
     margin-bottom: 0.8em;
     font-weight: 600;
     font-size: 1.5em;
+    .title {
+      width: 100%;
+    }
     .icon {
-      width: 32px;
+      width: 3ch;
       padding-bottom: 2px;
     }
   }
   .block summary {
+    display: flex;
     list-style: none;
     cursor: pointer;
     position: relative; /* Establish positioning context for ::after */
@@ -163,7 +175,6 @@
       position: relative;
       left: -20px;
       display: inline;
-      width: max-content;
       font-weight: 600;
       font-size: 0.95em;
     }
